--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="teilbereich">
         <div class="rundenstart-anzeige">
             <h1>Runde startet in</h1>
-            <h1 class="stoppuhr"><span id="stoppuhr-wert">300</span> s</h1>
+            <h1 class="stoppuhr"><span id="stoppuhr-wert"></span> s</h1>
         </div>
 
 
