--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <script src="scripts/stoppuhr.js"></script>
 <script src="scripts/verfuegbareAktionstypen.js"></script>
 <script src="scripts/geplanteAktionen.js"></script>
-<script src="scripts/index.js"></script>
+<script src="scripts/spielBeitreten.js"></script>
 <script>
   document.querySelectorAll(".aktions-auswahl").forEach(function (element) {
     element.addEventListener("change", aktionUebernehmen);
