Removed more parts of the logic so that the kids can implement these parts

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktions-wert">
-                    <!--  <input type="number">                           -->
+                    <!--  <input class="geschwindigkeit" type="number">   -->
                     <!--  <p class="aktions-einheit">Geschwindigkeit</p>  -->
-                    <!--  <input type="number">                           -->
+                    <!--  <input class="dauer" type="number">             -->
                     <!--  <p class="aktions-einheit">Dauer</p>            -->
                     <!-- -->
-                    <!--  <input type="number">                           -->
+                    <!--  <input class="grad" type="number">              -->
                     <!--  <p class="aktions-einheit">Grad</p>             -->
                     <!-- -->
                     <!--  <input class="rot" type="number">               -->
